# ibus-charmap

./: .dir-locals.el  .gitignore  Makefile.am  README  autogen.sh  configure.ac
debian/: changelog  control  copyright  files  rules
docs/: Makefile.am  ibus-charmap-docs.xml
engine/: Makefile.am  charmap-panel.vala  engine.vala  search-panel.vala
po/: POTFILES.in  ibus-gucharmap.pot  zh_CN.po
src/: Makefile.am  charmap-panel.vala  charmap-window.vala  client.vala  config-cache-dummy.vala  config-cache.vala  config.vapi  engine-main.vala  engine.vala  gen-index.vala  gucharmap-2.90.vapi  gucharmap.xml.in.in  ibus-charmap-preferences.ui  ibus-charmap.pc.in  ibus-gucharmap-preferences.ui  key-capture-dialog.vala  main.vala  org.freedesktop.ibus.engine.gucharmap.gschema.xml.in  proxy.vala  search-model.vala  search-panel.vala  selectable.vala  service-gtk-main.vala  service-gtk.vala  service.vala  setup-main.vala  setup.vala  window-placement.vala
tools/: Makefile.am
vapi/: Makefile.am  config.vapi
